@@ -1,5 +1,7 @@
 2006-06-03  Michal Nazarewicz  <mina86/AT/tlen.pl>
 
+	* mountiso.c: + nosuid,noexec,nodev,owner added to options
+
 	* quotes.txt: + few typos fixed and unified spaces at end of sentence
 
 	* mkpkg: New file
